[1.0.0-12] Fix menu truncated problem

--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ header a:hover {
   background-color: #3d3d3d;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 9999;
 }
 .dropdown-content a {
   color: black;
